--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -2857,14 +2857,14 @@ a.subdued {
     .bar.bar-royal.bar-footer {
       background-image: linear-gradient(180deg, #552bdf, #552bdf 50%, transparent 50%); }
   .bar.bar-dark {
-    border-color: #6798AC;
-    background-color: #6798ac;
-    background-image: linear-gradient(0deg, #6798AC, #6798AC 50%, transparent 50%);
+    border-color: #30525F;
+    background-color: #30525f;
+    background-image: linear-gradient(0deg, #30525F, #30525F 50%, transparent 50%);
     color: #fff; }
     .bar.bar-dark .title {
       color: #fff; }
     .bar.bar-dark.bar-footer {
-      background-image: linear-gradient(180deg, #6798AC, #6798AC 50%, transparent 50%); }
+      background-image: linear-gradient(180deg, #30525F, #30525F 50%, transparent 50%); }
   .bar .title {
     position: absolute;
     top: 0;
@@ -3106,8 +3106,8 @@ a.subdued {
     background: none; }
 
 .bar-dark .button {
-  border-color: #6798AC;
-  background-color: #6798ac;
+  border-color: #30525F;
+  background-color: #30525f;
   color: #fff; }
   .bar-dark .button:hover {
     color: #fff;
@@ -3278,12 +3278,12 @@ a.subdued {
 
 .tabs-dark > .tabs, .tabs.tabs-dark {
   border-color: #111;
-  background-color: #6798AC;
+  background-color: #30525F;
   background-image: linear-gradient(0deg, #111, #111 50%, transparent 50%);
   color: #fff; }
   .tabs-dark > .tabs .tab-item .badge, .tabs.tabs-dark .tab-item .badge {
     background-color: #fff;
-    color: #6798AC; }
+    color: #30525F; }
 
 .tabs-striped .tabs {
   background-color: white;
@@ -3295,9 +3295,9 @@ a.subdued {
   margin-top: -2px;
   border-style: solid;
   border-width: 2px 0 0 0;
-  border-color: #6798AC; }
+  border-color: #30525F; }
 .tabs-striped.tabs-light .tabs {
-  background-color: #6798AC; }
+  background-color: #30525F; }
 .tabs-striped.tabs-light .tab-item {
   color: rgba(255, 255, 255, 0.4);
   opacity: 1; }
@@ -3315,7 +3315,7 @@ a.subdued {
 .tabs-striped.tabs-top .tab-item.tab-item-active .badge, .tabs-striped.tabs-top .tab-item.active .badge, .tabs-striped.tabs-top .tab-item.activated .badge {
   top: 4%; }
 .tabs-striped.tabs-stable .tabs {
-  background-color: #6798AC; }
+  background-color: #30525F; }
 .tabs-striped.tabs-stable .tab-item {
   color: rgba(248, 248, 248, 0.4);
   opacity: 1; }
@@ -3443,16 +3443,16 @@ a.subdued {
 .tabs-striped.tabs-dark .tabs {
   background-color: #fff; }
 .tabs-striped.tabs-dark .tab-item {
-  color: rgba(103, 152, 172, 0.4);
+  color: rgba(48, 82, 95, 0.4);
   opacity: 1; }
   .tabs-striped.tabs-dark .tab-item .badge {
     opacity: 0.4; }
   .tabs-striped.tabs-dark .tab-item.tab-item-active, .tabs-striped.tabs-dark .tab-item.active, .tabs-striped.tabs-dark .tab-item.activated {
     margin-top: -2px;
-    color: #6798AC;
+    color: #30525F;
     border-style: solid;
     border-width: 2px 0 0 0;
-    border-color: #6798AC; }
+    border-color: #30525F; }
     .tabs-striped.tabs-dark .tab-item.tab-item-active .badge, .tabs-striped.tabs-dark .tab-item.active .badge, .tabs-striped.tabs-dark .tab-item.activated .badge {
       top: 2px;
       opacity: 1; }
@@ -3475,7 +3475,7 @@ a.subdued {
 .tabs-striped.tabs-background-royal .tabs {
   background-color: #8a6de9; }
 .tabs-striped.tabs-background-dark .tabs {
-  background-color: #6798AC; }
+  background-color: #30525F; }
 .tabs-striped.tabs-color-light .tab-item {
   color: rgba(255, 255, 255, 0.4);
   opacity: 1; }
@@ -3581,14 +3581,14 @@ a.subdued {
       top: 2px;
       opacity: 1; }
 .tabs-striped.tabs-color-dark .tab-item {
-  color: rgba(103, 152, 172, 0.4);
+  color: rgba(48, 82, 95, 0.4);
   opacity: 1; }
   .tabs-striped.tabs-color-dark .tab-item .badge {
     opacity: 0.4; }
   .tabs-striped.tabs-color-dark .tab-item.tab-item-active, .tabs-striped.tabs-color-dark .tab-item.active, .tabs-striped.tabs-color-dark .tab-item.activated {
     margin-top: -2px;
-    color: #6798AC;
-    border: 0 solid #6798AC;
+    color: #30525F;
+    border: 0 solid #30525F;
     border-top-width: 2px; }
     .tabs-striped.tabs-color-dark .tab-item.tab-item-active .badge, .tabs-striped.tabs-color-dark .tab-item.active .badge, .tabs-striped.tabs-color-dark .tab-item.activated .badge {
       top: 2px;
@@ -3718,7 +3718,7 @@ a.subdued {
   .tab-item.tab-item-active.tab-item-royal, .tab-item.active.tab-item-royal, .tab-item.activated.tab-item-royal {
     color: #8a6de9; }
   .tab-item.tab-item-active.tab-item-dark, .tab-item.active.tab-item-dark, .tab-item.activated.tab-item-dark {
-    color: #6798AC; }
+    color: #30525F; }
 
 .item.tabs {
   display: -webkit-box;
@@ -4232,7 +4232,7 @@ a.subdued {
     color: #fff; }
   .item.item-dark {
     border-color: #111;
-    background-color: #6798AC;
+    background-color: #30525F;
     color: #fff; }
   .item[ng-click]:hover {
     cursor: pointer; }
@@ -4369,7 +4369,7 @@ a.item-content {
     background-color: #552bdf; }
 .item-complex.item-dark > .item-content {
   border-color: #111;
-  background-color: #6798AC;
+  background-color: #30525F;
   color: #fff; }
   .item-complex.item-dark > .item-content.active, .item-complex.item-dark > .item-content:active {
     border-color: #000;
@@ -4718,7 +4718,7 @@ a.item-content {
   transition-delay: 125ms; }
 
 .item-reorder .button.icon {
-  color: #6798AC;
+  color: #30525F;
   font-size: 32px; }
 
 .item-reordering {
@@ -4874,7 +4874,7 @@ a.item-content {
   background-color: #8a6de9;
   color: #fff; }
 .tabs .tab-item .badge.badge-dark, .badge.badge-dark {
-  background-color: #6798AC;
+  background-color: #30525F;
   color: #fff; }
 
 .button .badge {
@@ -4938,7 +4938,7 @@ legend {
   padding: 0;
   width: 100%;
   border: 1px solid #ddd;
-  color: #6798AC;
+  color: #30525F;
   font-size: 21px;
   line-height: 2.85714; }
   legend small {
@@ -5073,7 +5073,7 @@ input, button, select, textarea {
   padding: 7px 10px 7px 0px;
   max-width: 200px;
   width: 35%;
-  color: #6798AC;
+  color: #30525F;
   font-size: 16px; }
 
 .placeholder-icon {
@@ -5143,11 +5143,11 @@ textarea {
   padding-left: 0; }
   textarea::-moz-placeholder {
     /* Firefox 19+ */
-    color: #ebf1f4; }
+    color: #93bac8; }
   textarea:-ms-input-placeholder {
-    color: #ebf1f4; }
+    color: #93bac8; }
   textarea::-webkit-input-placeholder {
-    color: #ebf1f4;
+    color: #93bac8;
     text-indent: -3px; }
 
 textarea {
@@ -5173,11 +5173,11 @@ input[type="file"] {
 
 input::-moz-placeholder, textarea::-moz-placeholder {
   /* Firefox 19+ */
-  color: #ebf1f4; }
+  color: #93bac8; }
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-  color: #ebf1f4; }
+  color: #93bac8; }
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
-  color: #ebf1f4;
+  color: #93bac8;
   text-indent: 0; }
 
 input[disabled], select[disabled], textarea[disabled], input[readonly]:not(.cloned-text-input), textarea[readonly]:not(.cloned-text-input), select[readonly] {
@@ -5242,9 +5242,9 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
   background: #8a6de9; }
 
 .checkbox-dark input:before, .checkbox-dark .checkbox-icon:before {
-  border-color: #6798AC; }
+  border-color: #30525F; }
 .checkbox-dark input:checked:before, .checkbox-dark input:checked + .checkbox-icon:before {
-  background: #6798AC; }
+  background: #30525F; }
 
 .checkbox input:disabled:before, .checkbox input:disabled + .checkbox-icon:before {
   border-color: #ddd; }
@@ -5375,8 +5375,8 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
     border-color: #8a6de9;
     background-color: #8a6de9; }
   .toggle.toggle-dark input:checked + .track {
-    border-color: #6798AC;
-    background-color: #6798AC; }
+    border-color: #30525F;
+    background-color: #30525F; }
 
 .toggle input {
   display: none; }
@@ -5534,7 +5534,7 @@ input[type="range"] {
     left: -2001px;
     width: 2000px;
     height: 4px;
-    background: #6798AC;
+    background: #30525F;
     content: ' '; }
   input[type="range"]::-webkit-slider-thumb:after {
     /* create a larger (but hidden) hit area */
@@ -5574,7 +5574,7 @@ input[type="range"] {
   .range.range-royal input::-webkit-slider-thumb:before {
     background: #8a6de9; }
   .range.range-dark input::-webkit-slider-thumb:before {
-    background: #6798AC; }
+    background: #30525F; }
 
 .range .icon {
   -webkit-box-flex: 0;
@@ -5696,7 +5696,7 @@ input[type="range"] {
   .item-select.item-royal:after, .item-select.item-royal .input-label {
     color: #fff; }
   .item-select.item-dark select {
-    background: #6798AC;
+    background: #30525F;
     color: #fff; }
   .item-select.item-dark:after, .item-select.item-dark .input-label {
     color: #fff; }
@@ -5989,7 +5989,7 @@ progress {
         color: #fff; }
   .button.button-dark {
     border-color: #111;
-    background-color: #6798AC;
+    background-color: #30525F;
     color: #fff; }
     .button.button-dark:hover {
       color: #fff;
@@ -6002,16 +6002,16 @@ progress {
       border-color: transparent;
       background: none;
       box-shadow: none;
-      color: #6798AC; }
+      color: #30525F; }
     .button.button-dark.button-icon {
       border-color: transparent;
       background: none; }
     .button.button-dark.button-outline {
-      border-color: #6798AC;
+      border-color: #30525F;
       background: transparent;
-      color: #6798AC; }
+      color: #30525F; }
       .button.button-dark.button-outline.active, .button.button-dark.button-outline.activated {
-        background-color: #6798AC;
+        background-color: #30525F;
         box-shadow: none;
         color: #fff; }
 
@@ -7700,10 +7700,10 @@ $ios-transition-box-shadow-end: -200px 0px 200px rgba(0,0,0,0.15), -5px 0px 5px 
   border-color: #552bdf; }
 
 .dark, a.dark {
-  color: #6798AC; }
+  color: #30525F; }
 
 .dark-bg {
-  background-color: #6798AC; }
+  background-color: #30525F; }
 
 .dark-border {
   border-color: #111; }
@@ -7823,3 +7823,23 @@ $ios-transition-box-shadow-end: -200px 0px 200px rgba(0,0,0,0.15), -5px 0px 5px 
 .platform-c:not(.enable-transitions) * {
   -webkit-transition: none !important;
   transition: none !important; }
+
+.bar-dark {
+  background-color: #30525F; }
+
+label > input {
+  background-color: transparent; }
+
+label.item-input-wrapper {
+  background-color: white; }
+
+input::-webkit-input-placeholder {
+  color: #8D8D8D; }
+
+input:-moz-placeholder {
+  color: #8D8D8D; }
+
+input:-ms-input-placeholder {
+  /* IE10+ */
+  color: #8D8D8D; }
+
