--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -18,7 +18,17 @@ $dark:                            #444 !default;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  margin-right: 0; }
+  margin-right: auto; }
+
+.buttons.right-buttons span > input {
+  height: 23px;
+  width: 200px;
+  background-color: white;
+  border-radius: 8px;
+  margin-top: 2px;
+  margin-right: 8px;
+  padding-left: 15px;
+  padding-top: 4px; }
 
 .item-input-wrapper {
   max-width: 45%; }
@@ -7842,4 +7852,3 @@ input:-moz-placeholder {
 input:-ms-input-placeholder {
   /* IE10+ */
   color: #8D8D8D; }
-
