--- a/www/partials/menu.html
+++ b/www/partials/menu.html
@@ -1,8 +1,7 @@
 <ion-view>
 <ion-content delegate-handle="menuScroll">
     <div class="list">
-        <a class="item item-icon-left" ui-sref="tour.favorites" menu-close nav-clear>
-            <i class="icon ion-star"></i>
+        <a class="item" ui-sref="tour.favorites" menu-close nav-clear>
             My Favorites
         </a>
         <div class="item item-divider">
