--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -13,10 +13,14 @@
     <div class="card">
         <h2>External Resources</h2>
         <p>A new web site has been developed that will continue to expand with the ever growing collection.  A map and walking tour of the central campus is available online <a href="http://uh.edu/uh-collection">here</a>. We are also on Facebook <a href="https://www.facebook.com/pages/University-of-Houston-Public-Art-Collection/174240729070">here</a>.</p>
+        <p>
+            If you’d like to see more art on campus, visit <a href="http://www.blafferartmuseum.org/">Blaffer Art Museum</a>. To learn more and schedule a free tour for groups of 10 or more, visit <a href="http://blafferartmuseum.org.s158155.gridserver.com/guided-tours/">here</a>.
+        </p>
     </div>
     <div class="card">
         <h2>Contact Info</h2>
         <p>For further information you can contact Michael Guidry, Curator of the University Art Collection at mguidry3@uh.edu or 713-743-5315.</p>
+        <img src="img/uhart.jpg">
     </div>
 </ion-content>
 </ion-view>
