--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -12,7 +12,7 @@
     </div>
     <div class="card">
         <h2>External Resources</h2>
-        <p>A new web site has been developed that will continue to expand with the ever growing collection.  A map and walking tour of the central campus is available online <a target="_system" href="http://uh.edu/uh-collection">here</a>. We are also on Facebook <a target="_system" href="https://www.facebook.com/pages/University-of-Houston-Public-Art-Collection/174240729070">here</a>.</p>
+        <p>A new web site has been developed that will continue to expand with the ever growing collection.  A map and walking tour of the central campus is available online <a ng-click="goToLink('http://uh.edu/uh-collection')" style="color:blue;text-decoration: underline;">here</a>. We are also on Facebook <a ng-click="goToLink('https://www.facebook.com/pages/University-of-Houston-Public-Art-Collection/174240729070')" style="color:blue;text-decoration: underline;">here</a>.</p>
     </div>
     <div class="card">
         <h2>Contact Info</h2>
