--- a/www/partials/collageView.html
+++ b/www/partials/collageView.html
@@ -12,6 +12,11 @@
         </button>
     </ion-nav-buttons>
     <ion-content delegate-handle="sliderScroll" style="background: rgba(104, 152, 172, 0.1)">
+        <div class="card" ng-show="tourGet(tourID).description!=null">
+            <div class="item item-text-wrap">
+                {{tourGet(tourID).description}}
+            </div>
+        </div>
         <div class="box">
             <div class="photo_container" ng-repeat="artOb in artworkGet(tourID) | filter:query" ui-sref="tour.artDetail({artID:{{artOb.artwork_id}}})">
                 <img img-cache ic-src="{{genImList(artOb)}}" />
