Menu items now indicate which state is active. Map now located in sub-footer. Added proper CSS to description card. Fixes #22. Fixes #27. Fixes #28.

--- a/www/partials/collageView.html
+++ b/www/partials/collageView.html
@@ -11,10 +11,10 @@
             <img src="img/aricon.png" height="32px"/>
         </button>
     </ion-nav-buttons>
-    <ion-content delegate-handle="sliderScroll" style="background: rgba(104, 152, 172, 0.1);bottom:0px;">
-        <div class="card" ng-show="tourGet(tourID).description!=null">
+    <ion-content delegate-handle="sliderScroll" style="background: rgba(104, 152, 172, 0.1);bottom:30px;">
+        <div class="card" ng-show="curTour.description!=null" style="margin: 5px">
             <div class="item item-text-wrap">
-                <h1>{{curTour.tour_title}}</h1>
+<!--                <h1>{{curTour.tour_title}}</h1>-->
                 {{curTour.description}}
             </div>
         </div>
