#27 style sub header

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,7 +21,10 @@ $font-family-base:                $font-family-milo !default;
 
 $dark:                            #30525F;
 $bar-dark-border:                 $dark;  
-
+h1 {
+	color: $dark !important;
+	font-weight: bolder !important;
+}
 .buttons.right-buttons span {
 	display: -webkit-inline-flex !important;
 	display: -ms-inline-flexbox !important;
@@ -47,6 +50,14 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
+.description, .description>div {
+	background-color: transparent !important;
+	box-shadow: none;
+}
+.description>div {
+	padding: 0;
+	margin: 0;
+}
 .bar-dark {
 	background-color: #30525F;
 }
