--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -14,6 +14,10 @@ $assertive:                       #ef4e3a !default;
 $royal:                           #8a6de9 !default;
 $dark:                            #444 !default;
 */
+h1 {
+  color: #30525F !important;
+  font-weight: bolder !important; }
+
 .buttons.right-buttons span {
   display: -webkit-inline-flex !important;
   display: -ms-inline-flexbox !important;
@@ -7620,6 +7624,14 @@ a.button {
   opacity: 0;
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
+
+.description, .description > div {
+  background-color: transparent !important;
+  box-shadow: none; }
+
+.description > div {
+  padding: 0;
+  margin: 0; }
 
 .bar-dark {
   background-color: #30525F; }
