--- a/www/partials/collageView.html
+++ b/www/partials/collageView.html
@@ -4,17 +4,17 @@
             <i class="icon ion-ios7-search placeholder-icon"></i> -->
             <input ng-model="$parent.query" type="search" placeholder="Search">
         <!-- </label> -->
-        <button class="button button-icon button-clear" ng-click="toggleMap()">
+<!--         <button class="button button-icon button-clear" ng-click="toggleMap()">
             <img src="img/map.svg" height="32px"/>
-        </button>
+        </button> -->
         <button class="button button-icon button-clear" ng-click="loadAR(artworkGet(tourID), tourGet(tourID).tour_title, tourID)">
             <img src="img/aricon.png" height="32px"/>
         </button>
     </ion-nav-buttons>
     <ion-content delegate-handle="sliderScroll" style="background: rgba(104, 152, 172, 0.1);bottom:30px;">
-        <div class="card" ng-show="curTour.description!=null" style="margin: 5px">
+        <div class="card description" ng-show="curTour.description!=null" style="margin: 5px">
             <div class="item item-text-wrap">
-<!--                <h1>{{curTour.tour_title}}</h1>-->
+                <h1>{{curTour.tour_title}}</h1>
                 {{curTour.description}}
             </div>
         </div>
@@ -39,6 +39,7 @@
         <div ng-click="toggleMap()" class="item item-icon-left item-divider">
             <i ng-hide="!mapShow" class="icon ion-arrow-down-b"></i>
             <i ng-show="!mapShow" class="icon ion-arrow-right-b"></i>
+            <!-- <img src="img/map.svg" height="32px"/> -->
             Map
         </div>
         <div ng-show="mapShow">
