--- a/www/partials/menu.html
+++ b/www/partials/menu.html
@@ -1,14 +1,13 @@
 <ion-view>
 <ion-content delegate-handle="menuScroll">
     <div class="list">
-        <a class="item item-icon-left" ui-sref="tour.favorites" menu-close nav-clear>
-            <i class="icon ion-star"></i>
+        <a class="item" ui-sref="tour.favorites" menu-close nav-clear>
             My Favorites
         </a>
         <div class="item item-divider">
             Tours
         </div>
-        <a ui-sref="tour.collage({tourID:{{tour.tour_id}}})" ng-repeat="tour in toursGet()" class="item" menu-close nav-clear ng-class="{active:isActive('/tour/collage/{{tour.tour_id}}')}">
+        <a ui-sref="tour.collage({tourID:{{tour.tour_id}}})" ng-repeat="tour in toursGet()" class="item" menu-close nav-clear>
             <h3>{{tour.tour_title}}</h3>
         </a>
     </div>
