--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -46,8 +46,15 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
+.button-positive {
+	color: white !important;
+}
+.slider-pager {
+	bottom: 54px;
+}
 .slider {
   height: 100% !important;
+  z-index: 10;
 }
 .slider-slide {
   padding-top: 80px;
