--- a/www/partials/collageView.html
+++ b/www/partials/collageView.html
@@ -6,8 +6,8 @@
         </button>
     </ion-nav-buttons>
     <ion-content delegate-handle="sliderScroll" style="background: rgba(104, 152, 172, 0.1);bottom:30px;">
-        <div class="card description" style="margin: 5px">
-            <div class="item item-text-wrap">
+        <div class="description" style="margin: 5px">
+            <div class="item-text-wrap">
                 <h1>{{curTour.tour_title}}</h1>
                 <div ng-show="curTour.description!=null">
                     {{curTour.description}}
