Replace up and down arrows

--- a/www/partials/collageView.html
+++ b/www/partials/collageView.html
@@ -37,8 +37,7 @@
     </ion-content>
     <ion-footer-bar align-title="left" class="bar-subfooter" style="height:auto;padding:0px;">
         <div ng-click="toggleMap()" class="item item-icon-left item-divider">
-            <i ng-hide="!mapShow" class="icon ion-arrow-down-b"></i>
-            <i ng-show="!mapShow" class="icon ion-arrow-right-b"></i>
+            <i class="icon ion-android-globe"></i>
             <!-- <img src="img/map.svg" height="32px"/> -->
             Map
         </div>
