--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -5,11 +5,6 @@
         <button class="button button-icon button-clear" ng-click="toggleMap()">
             <img src="img/map.svg" height="32px"/>
         </button>
-<!--
-        <button class="button button-icon button-clear" ng-hide="ARModeActive" ng-click="loadAR()">
-            <img src="img/aricon.png" height="32px"/>
-        </button>
--->
         <button class="button button-icon button-clear" ng-show="ARModeActive" ng-click="returnToAR()">
             <img src="img/aricon.png" height="32px"/>
         </button>
@@ -17,7 +12,7 @@
     <ion-content delegate-handle="detailScroll">
         <div class="">
             <img img-cache class="item" ic-src="{{genImList(detailArt)}}" style="max-height:84%;max-width:100%; min-width: 250px; margin:auto; border:none;">
-            <div class="item item-text-wrap">
+            <div class=" item-text-wrap">
                 <h1 ng-controller="favoriteCtrl">
                     <span style="margin:auto">{{detailArt.title}}</span>
                     <button class="button button-icon button-clear" ng-click="toggleFavorite()" style="float: right;">
@@ -30,8 +25,7 @@
                 <p ng-hide="!detailArt.description || detailArt.description==''">{{detailArt.description}}</p>
             </div>
             <div ng-click="resizeScroll(); artistInfo=!artistInfo;" class="item item-icon-left item-divider" ng-init="artistInfo=false">
-                <i ng-show="artistInfo" class="icon ion-arrow-down-b"></i>
-                <i ng-hide="artistInfo" class="icon ion-arrow-right-b"></i>
+                <i class="icon ion-person"></i>
                 Artist Info
             </div>
             <div class="item item-text-wrap" ng-show="artistInfo">
@@ -41,8 +35,7 @@
                 <p ng-hide="!detailArt.artist_website || detailArt.artist_website==''">Website: <a ng-click="goToLink('{{detailArt.artist_website}}')" style="color:blue;text-decoration: underline;">{{detailArt.artist_website}}</a></p>
             </div>
             <div ng-click="resizeScroll(); locationInfo=!locationInfo;" class="item item-icon-left item-divider" ng-init="locationInfo=false">
-                <i ng-show="locationInfo" class="icon ion-arrow-down-b"></i>
-                <i ng-hide="locationInfo" class="icon ion-arrow-right-b"></i>
+                <i class="icon ion-ios-location-outline"></i>
                 Location Info
             </div>
             <div class="item item-text-wrap" ng-show="locationInfo">
@@ -51,8 +44,7 @@
                 <p ng-hide="!detailArt.availability || detailArt.availability==''">Availability: {{detailArt.availability}}</p>
             </div>
             <div ng-click="resizeScroll(); charInfo=!charInfo;" class="item item-icon-left item-divider" ng-init="charInfo=false">
-                <i ng-show="charInfo" class="icon ion-arrow-down-b"></i>
-                <i ng-hide="charInfo" class="icon ion-arrow-right-b"></i>
+                <i class="icon ion-clipboard"></i>
                 Characteristics
             </div>
             <div class="item item-text-wrap" ng-show="charInfo">
@@ -61,8 +53,7 @@
                 <p ng-hide="!detailArt.dimensions || detailArt.dimensions==''">Dimensions: {{detailArt.dimensions}}</p>
             </div>
             <div ng-click="toggleMap()" class="item item-icon-left item-divider">
-                <i ng-hide="!mapShow" class="icon ion-arrow-down-b"></i>
-                <i ng-show="!mapShow" class="icon ion-arrow-right-b"></i>
+                <i class="icon ion-android-globe"></i>
                 Map
             </div>
             <div ng-show="mapShow">
