--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -14,7 +14,7 @@
             <img src="img/aricon.png" height="32px"/>
         </button>
     </ion-nav-buttons>
-    <ion-content delegate-handle="detailScroll">
+    <ion-content delegate-handle="detailScroll" style="background: rgba(104, 152, 172, 0.1);bottom:79px;">
         <div class="">
             <img img-cache class="item" ic-src="{{genImList(detailArt)}}" style="max-height:84%;max-width:100%; min-width: 250px; margin:auto; border:none;">
 
@@ -61,6 +61,7 @@
                 <p ng-hide="!detailArt.medium || detailArt.medium==''">Medium: {{detailArt.medium}}</p>
                 <p ng-hide="!detailArt.dimensions || detailArt.dimensions==''">Dimensions: {{detailArt.dimensions}}</p>
             </div>
+<!--
             <div ng-click="toggleMap()" class="item item-icon-left item-divider">
                 <i ng-hide="!mapShow" class="icon ion-arrow-down-b"></i>
                 <i ng-show="!mapShow" class="icon ion-arrow-right-b"></i>
@@ -69,6 +70,19 @@
             <div ng-show="mapShow">
                 <googlemaps class="google-maps" options="map"></googlemaps>
             </div>
+-->
         </div>
     </ion-content>
+    <ion-footer-bar align-title="left" class="bar-subfooter" style="height:auto;padding:0px;">
+        <div ng-click="openModal()" class="item item-icon-left item-divider">
+            <i class="icon ion-earth"></i>
+            
+            Map
+        </div>
+<!--
+        <div ng-show="mapShow">
+            <googlemaps class="google-maps" options="map"></googlemaps>
+        </div>
+-->
+</ion-footer-bar>
 </ion-view>
