--- a/www/partials/mapModal.html
+++ b/www/partials/mapModal.html
@@ -1,9 +1,9 @@
 <ion-modal-view>
-    <ion-header-bar ng-click="closeModal()">
+    <ion-header-bar ng-click="closeModal()" no-tap-scroll="true">
         <button class="button button-icon button-clear" ng-click="closeModal()">
             <i class="icon ion-close"/>
         </button>
-        <h1 class="title">{{curTour.tour_title}} Tour</h1>
+        <h1 class="title">{{curTour.tour_title ? curTour.tour_title : detailArt.title}}</h1>
     </ion-header-bar>
     <ion-content scroll="false">
         <googlemaps class="google-maps" options="map"></googlemaps>
