fix displaying buttons

--- a/www/partials/intro.html
+++ b/www/partials/intro.html
@@ -11,11 +11,11 @@
         </ion-nav-buttons>
         <ion-nav-buttons side="right"> 
           <button class="button button-positive button-clear no-animation"
-                  ng-click="next()" ng-show="slideIndex != 2">
+                  ng-click="next()" ng-show="slideIndex != 3">
             Next
           </button>
           <button class="button button-positive button-clear no-animation"
-                  ng-click="startApp()" ng-show="slideIndex == 2">
+                  ng-click="startApp()" ng-show="slideIndex == 3">
             Start using MyApp
           </button>
         </ion-nav-buttons>
@@ -32,6 +32,8 @@
               But if you are angry, too bad.
             </p>
           </ion-slide>
+
+
           <ion-slide>
             <h3>Using Awesome</h3>
             
@@ -44,11 +46,22 @@
               </ol>
             </div>
           </ion-slide>
+
+
           <ion-slide>
             <h3>Any questions?</h3>
             <p>
               Too bad!
             </p>
           </ion-slide>
+
+          <ion-slide>
+            <h3>Any questions?</h3>
+            <p>
+              Too bad!
+            </p>
+          </ion-slide>
+
+
         </ion-slide-box>
       </ion-view>
