--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -14,8 +14,9 @@
                 <h1 ng-controller="favoriteCtrl">
                     <span style="margin:auto">{{detailArt.title}}</span>
                     <button class="button button-icon button-clear" ng-click="toggleFavorite()" style="float: right;">
-                        <img src="img/fav_no.svg" height="40px" ng-show="!isFavorite"/>
-                        <img src="img/fav_yes.svg" height="40px" ng-show="isFavorite"/>
+<!--                         <img src="img/fav_no.svg" height="40px" ng-show="!isFavorite"/>
+                        <img src="img/fav_yes.svg" height="40px" ng-show="isFavorite"/> -->
+                        <i class="icon ion-heart" ng-class="{'isFavorite':isFavorite}"></i>
                     </button>
                 </h1>
                 <h2>{{detailArt.artist_name}}</h2>
@@ -23,8 +24,7 @@
                 <p ng-hide="!detailArt.description || detailArt.description==''">{{detailArt.description}}</p>
             </div>
             <div ng-click="resizeScroll(); artistInfo=!artistInfo;" class="item item-icon-left item-divider" ng-init="artistInfo=false">
-                <i ng-show="artistInfo" class="icon ion-arrow-down-b"></i>
-                <i ng-hide="artistInfo" class="icon ion-arrow-right-b"></i>
+                <i class="icon ion-person"></i>
                 Artist Info
             </div>
             <div class="item item-text-wrap" ng-show="artistInfo">
@@ -34,8 +34,7 @@
                 <p ng-hide="!detailArt.artist_website || detailArt.artist_website==''">Website: <a ng-click="goToLink('{{detailArt.artist_website}}')" style="color:blue;text-decoration: underline;">{{detailArt.artist_website}}</a></p>
             </div>
             <div ng-click="resizeScroll(); locationInfo=!locationInfo;" class="item item-icon-left item-divider" ng-init="locationInfo=false">
-                <i ng-show="locationInfo" class="icon ion-arrow-down-b"></i>
-                <i ng-hide="locationInfo" class="icon ion-arrow-right-b"></i>
+                <i class="icon ion-location"></i>
                 Location Info
             </div>
             <div class="item item-text-wrap" ng-show="locationInfo">
@@ -44,8 +43,7 @@
                 <p ng-hide="!detailArt.availability || detailArt.availability==''">Availability: {{detailArt.availability}}</p>
             </div>
             <div ng-click="resizeScroll(); charInfo=!charInfo;" class="item item-icon-left item-divider" ng-init="charInfo=false">
-                <i ng-show="charInfo" class="icon ion-arrow-down-b"></i>
-                <i ng-hide="charInfo" class="icon ion-arrow-right-b"></i>
+                <i class="icon ion-clipboard"></i>
                 Characteristics
             </div>
             <div class="item item-text-wrap" ng-show="charInfo">
