--- a/www/partials/menu.html
+++ b/www/partials/menu.html
@@ -2,7 +2,7 @@
 <ion-content delegate-handle="menuScroll">
     <div class="list">
         <a class="item" ui-sref="tour.favorites" menu-close nav-clear>
-            My Favorites
+            <i class="icon ion-heart isFavorite"></i>  My Favorites
         </a>
         <div class="item item-divider">
             Tours
