--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -6,7 +6,7 @@
             <img src="img/aricon.png" height="32px"/>
         </button>
     </ion-nav-buttons>
-    <ion-content delegate-handle="detailScroll" style="background: rgba(104, 152, 172, 0.1);bottom:79px;">
+    <ion-content delegate-handle="detailScroll" style="bottom:79px;">
         <div class="">
             <img img-cache class="item" ic-src="{{genImList(detailArt)}}" style="max-height:84%;max-width:100%; min-width: 250px; margin:auto; border:none;">
 
