--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -59,7 +59,7 @@ a > .isFavorite {
 @font-face {
   font-family: "Ionicons";
   src: url("../lib/ionic/fonts/ionicons.eot?v=2.0.1");
-  src: url("../lib/ionic/fonts/ionicons.eot?v=2.0.1#iefix") format("embedded-opentype"), url("../lib/ionic/fonts/ionicons.ttf?v=2.0.1") format("truetype"), url("../lib/ionic/fonts/ionicons.woff?v=2.0.1") format("woff"), url("../lib/ionic/fonts/ionicons.woff") format("woff"), url("../lib/ionic/fonts/ionicons.svg?v=2.0.1#Ionicons") format("svg");
+  src: url("../lib/ionic/fonts/ionicons.eot?v=2.0.1#iefix") format("embedded-opentype"), url("../lib/ionic/fonts/ionicons.ttf?v=2.0.1") format("truetype"), url("../lib/ionic/fonts/ionicons.woff?v=2.0.1") format("woff"), url("../lib/ionic/fonts/ionicons.svg?v=2.0.1#Ionicons") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -2622,7 +2622,7 @@ body.grade-b, body.grade-c {
   width: auto;
   height: auto; }
 
-.menu .scroll-content.scroll-content-false {
+.scroll-content-false, .menu .scroll-content.scroll-content-false {
   z-index: 11; }
 
 .scroll-view {
@@ -2646,13 +2646,6 @@ body.grade-b, body.grade-c {
   text-size-adjust: none;
   -webkit-transform-origin: left top;
   transform-origin: left top; }
-
-/**
- * Set ms-viewport to prevent MS "page squish" and allow fluid scrolling
- * https://msdn.microsoft.com/en-us/library/ie/hh869615(v=vs.85).aspx
- */
-@-ms-viewport {
-  width: device-width; }
 
 .scroll-bar {
   position: absolute;
@@ -4172,7 +4165,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   white-space: nowrap;
   font-weight: 400;
   font-size: 14px;
-  font-family: "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "Helvetica Neue", "Roboto", sans-serif;
   opacity: 0.7; }
   .tab-item:hover {
     cursor: pointer; }
@@ -4346,6 +4339,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
     right: 20%;
     bottom: 20%;
     left: 20%;
+    overflow: visible;
     min-height: 240px;
     width: 60%; }
   .modal.ng-leave-active {
@@ -4360,7 +4354,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
     top: 44px; }
   .platform-ios.platform-cordova .modal-wrapper .modal .has-subheader {
     top: 88px; }
-  .platform-ios.platform-cordova .modal-wrapper .modal .has-header.has-tabs-top {
+  .platform-ios.platform-cordova .modal-wrapper .modal .has-tabs-top {
     top: 93px; }
   .platform-ios.platform-cordova .modal-wrapper .modal .has-header.has-subheader.has-tabs-top {
     top: 137px; }
@@ -4582,7 +4576,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
 
 .popup-body {
   padding: 10px;
-  overflow: auto; }
+  overflow: scroll; }
 
 .popup-buttons {
   display: -webkit-box;
@@ -5641,22 +5635,6 @@ a.item-content {
   stop-color: #30525F; }
 .spinner-spiral.spinner-light .stop2 {
   stop-color: #fff; }
-.spinner-spiral.spinner-stable .stop2 {
-  stop-color: #f8f8f8; }
-.spinner-spiral.spinner-positive .stop2 {
-  stop-color: #387ef5; }
-.spinner-spiral.spinner-calm .stop2 {
-  stop-color: #11c1f3; }
-.spinner-spiral.spinner-balanced .stop2 {
-  stop-color: #33cd5f; }
-.spinner-spiral.spinner-assertive .stop2 {
-  stop-color: #ef473a; }
-.spinner-spiral.spinner-energized .stop2 {
-  stop-color: #ffc900; }
-.spinner-spiral.spinner-royal .stop2 {
-  stop-color: #886aea; }
-.spinner-spiral.spinner-dark .stop2 {
-  stop-color: #30525F; }
 
 /**
  * Forms
@@ -5742,9 +5720,6 @@ input, button, select, textarea {
     appearance: none; }
   .item-input .icon {
     min-width: 14px; }
-
-.platform-windowsphone .item-input input {
-  flex-shrink: 1; }
 
 .item-input-inset {
   display: -webkit-box;
@@ -6344,28 +6319,6 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
     left: -15px;
     padding: 30px;
     content: ' '; }
-  .range input::-ms-track {
-    background: transparent;
-    border-color: transparent;
-    border-width: 11px 0 16px;
-    color: transparent;
-    margin-top: 20px; }
-  .range input::-ms-thumb {
-    width: 28px;
-    height: 28px;
-    border-radius: 50%;
-    background-color: #fff;
-    border-color: #fff;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2);
-    margin-left: 1px;
-    margin-right: 1px;
-    outline: none; }
-  .range input::-ms-fill-lower {
-    height: 2px;
-    background: #30525F; }
-  .range input::-ms-fill-upper {
-    height: 2px;
-    background: #ccc; }
 
 .range {
   display: -webkit-box;
@@ -6382,39 +6335,21 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
   padding: 2px 11px; }
   .range.range-light input::-webkit-slider-thumb:before {
     background: #ddd; }
-  .range.range-light input::-ms-fill-lower {
-    background: #ddd; }
   .range.range-stable input::-webkit-slider-thumb:before {
-    background: #b2b2b2; }
-  .range.range-stable input::-ms-fill-lower {
     background: #b2b2b2; }
   .range.range-positive input::-webkit-slider-thumb:before {
     background: #387ef5; }
-  .range.range-positive input::-ms-fill-lower {
-    background: #387ef5; }
   .range.range-calm input::-webkit-slider-thumb:before {
-    background: #11c1f3; }
-  .range.range-calm input::-ms-fill-lower {
     background: #11c1f3; }
   .range.range-balanced input::-webkit-slider-thumb:before {
     background: #33cd5f; }
-  .range.range-balanced input::-ms-fill-lower {
-    background: #33cd5f; }
   .range.range-assertive input::-webkit-slider-thumb:before {
-    background: #ef473a; }
-  .range.range-assertive input::-ms-fill-lower {
     background: #ef473a; }
   .range.range-energized input::-webkit-slider-thumb:before {
     background: #ffc900; }
-  .range.range-energized input::-ms-fill-lower {
-    background: #ffc900; }
   .range.range-royal input::-webkit-slider-thumb:before {
     background: #886aea; }
-  .range.range-royal input::-ms-fill-lower {
-    background: #886aea; }
   .range.range-dark input::-webkit-slider-thumb:before {
-    background: #30525F; }
-  .range.range-dark input::-ms-fill-lower {
     background: #30525F; }
 
 .range .icon {
@@ -6457,9 +6392,6 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
   padding-right: 5px;
   padding-left: 0; }
 
-.platform-windowsphone .range input {
-  height: auto; }
-
 /**
  * Select
  * --------------------------------------------------
@@ -6472,7 +6404,6 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
     appearance: none;
     position: absolute;
     top: 0;
-    bottom: 0;
     right: 0;
     padding: 14px 48px 16px 16px;
     max-width: 65%;
@@ -7533,9 +7464,6 @@ a.button {
   /* when scrolling horizontally, make sure the after container doesn't take up 100% width */ }
   .collection-repeat-after-container.horizontal {
     display: inline-block; }
-
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak, .ng-hide:not(.ng-hide-animate) {
-  display: none !important; }
 
 /**
  * Platform
