Make theme color darker and some other minor changes

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -19,7 +19,7 @@ $dark:                            #444 !default;
 $font-family-milo:                MiloOTLight !default;
 $font-family-base:                $font-family-milo !default;
 
-$dark:                            #30525F;
+$dark:                            #233C45;
 $bar-dark-border:                 $dark;
 .item {
 	border:none !important;
