--- a/www/css/active_style.css
+++ b/www/css/active_style.css
@@ -57,7 +57,7 @@ html, body{
     bottom: 0;
     height: 48px;
     margin-bottom: 7px;
-    background: #30525F;
+    background: #233C45;
     color: #FFF;
     padding: 5px;
     text-align: center;
