--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -21,7 +21,10 @@
     </div>
     <div class="card">
         <h2>Contact Info</h2>
-        <p>For further information you can contact Michael Guidry, Curator of the University Art Collection at mguidry3@uh.edu or 713-743-5315.</p>
+        <p>For further information you can contact Michael Guidry, Curator of the University Art Collection at
+        <address>
+            <br>mguidry3@uh.edu or <br>713-743-5315.</p>
+        </address>
         <img src="img/uhart.jpg">
     </div>
 </ion-content>
