--- a/www/partials/intro.html
+++ b/www/partials/intro.html
@@ -21,7 +21,7 @@
         </ion-nav-buttons>
         <ion-slide-box on-slide-changed="slideChanged(index)">
           <ion-slide>
-            <h3>Thank you for choosing the Awesome App!</h3>
+            <h3>Thank you for choosing this Awesome Public Art App!</h3>
             <div id="logo">
               <img src="http://code.ionicframework.com/assets/img/app_icon.png">
             </div>
@@ -51,14 +51,14 @@
           <ion-slide>
             <h3>Any questions?</h3>
             <p>
-              Too bad!
+              Alright!
             </p>
           </ion-slide>
 
           <ion-slide>
-            <h3>Any questions?</h3>
+            <h3>Are you sure?</h3>
             <p>
-              Too bad!
+              Awesome!
             </p>
           </ion-slide>
 
