--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -3174,14 +3174,14 @@ a.subdued {
     .bar.bar-royal.bar-footer {
       background-image: linear-gradient(180deg, #6b46e5, #6b46e5 50%, transparent 50%); }
   .bar.bar-dark {
-    border-color: #30525F;
-    background-color: #30525f;
-    background-image: linear-gradient(0deg, #30525F, #30525F 50%, transparent 50%);
+    border-color: #233C45;
+    background-color: #233c45;
+    background-image: linear-gradient(0deg, #233C45, #233C45 50%, transparent 50%);
     color: #fff; }
     .bar.bar-dark .title {
       color: #fff; }
     .bar.bar-dark.bar-footer {
-      background-image: linear-gradient(180deg, #30525F, #30525F 50%, transparent 50%); }
+      background-image: linear-gradient(180deg, #233C45, #233C45 50%, transparent 50%); }
   .bar .title {
     position: absolute;
     top: 0;
@@ -3437,8 +3437,8 @@ a.subdued {
     background: none; }
 
 .bar-dark .button {
-  border-color: #30525F;
-  background-color: #30525f;
+  border-color: #233C45;
+  background-color: #233c45;
   color: #fff; }
   .bar-dark .button:hover {
     color: #fff;
@@ -3629,12 +3629,12 @@ a.subdued {
 
 .tabs-dark > .tabs, .tabs.tabs-dark {
   border-color: #111;
-  background-color: #30525F;
+  background-color: #233C45;
   background-image: linear-gradient(0deg, #111, #111 50%, transparent 50%);
   color: #fff; }
   .tabs-dark > .tabs .tab-item .badge, .tabs.tabs-dark .tab-item .badge {
     background-color: #fff;
-    color: #30525F; }
+    color: #233C45; }
 
 .tabs-striped .tabs {
   background-color: white;
@@ -3646,38 +3646,38 @@ a.subdued {
   margin-top: -2px;
   border-style: solid;
   border-width: 2px 0 0 0;
-  border-color: #30525F; }
+  border-color: #233C45; }
   .tabs-striped .tab-item.tab-item-active .badge, .tabs-striped .tab-item.active .badge, .tabs-striped .tab-item.activated .badge {
     top: 2px;
     opacity: 1; }
 .tabs-striped.tabs-light .tabs {
   background-color: #fff; }
 .tabs-striped.tabs-light .tab-item {
-  color: rgba(48, 82, 95, 0.4);
+  color: rgba(35, 60, 69, 0.4);
   opacity: 1; }
   .tabs-striped.tabs-light .tab-item .badge {
     opacity: 0.4; }
   .tabs-striped.tabs-light .tab-item.tab-item-active, .tabs-striped.tabs-light .tab-item.active, .tabs-striped.tabs-light .tab-item.activated {
     margin-top: -2px;
-    color: #30525F;
+    color: #233C45;
     border-style: solid;
     border-width: 2px 0 0 0;
-    border-color: #30525F; }
+    border-color: #233C45; }
 .tabs-striped.tabs-top .tab-item.tab-item-active .badge, .tabs-striped.tabs-top .tab-item.active .badge, .tabs-striped.tabs-top .tab-item.activated .badge {
   top: 4%; }
 .tabs-striped.tabs-stable .tabs {
   background-color: #f8f8f8; }
 .tabs-striped.tabs-stable .tab-item {
-  color: rgba(48, 82, 95, 0.4);
+  color: rgba(35, 60, 69, 0.4);
   opacity: 1; }
   .tabs-striped.tabs-stable .tab-item .badge {
     opacity: 0.4; }
   .tabs-striped.tabs-stable .tab-item.tab-item-active, .tabs-striped.tabs-stable .tab-item.active, .tabs-striped.tabs-stable .tab-item.activated {
     margin-top: -2px;
-    color: #30525F;
+    color: #233C45;
     border-style: solid;
     border-width: 2px 0 0 0;
-    border-color: #30525F; }
+    border-color: #233C45; }
 .tabs-striped.tabs-top .tab-item.tab-item-active .badge, .tabs-striped.tabs-top .tab-item.active .badge, .tabs-striped.tabs-top .tab-item.activated .badge {
   top: 4%; }
 .tabs-striped.tabs-positive .tabs {
@@ -3771,7 +3771,7 @@ a.subdued {
 .tabs-striped.tabs-top .tab-item.tab-item-active .badge, .tabs-striped.tabs-top .tab-item.active .badge, .tabs-striped.tabs-top .tab-item.activated .badge {
   top: 4%; }
 .tabs-striped.tabs-dark .tabs {
-  background-color: #30525F; }
+  background-color: #233C45; }
 .tabs-striped.tabs-dark .tab-item {
   color: rgba(255, 255, 255, 0.4);
   opacity: 1; }
@@ -3810,7 +3810,7 @@ a.subdued {
   background-color: #886aea;
   background-image: none; }
 .tabs-striped.tabs-background-dark .tabs {
-  background-color: #30525F;
+  background-color: #233C45;
   background-image: none; }
 .tabs-striped.tabs-color-light .tab-item {
   color: rgba(255, 255, 255, 0.4);
@@ -3917,14 +3917,14 @@ a.subdued {
       top: 2px;
       opacity: 1; }
 .tabs-striped.tabs-color-dark .tab-item {
-  color: rgba(48, 82, 95, 0.4);
+  color: rgba(35, 60, 69, 0.4);
   opacity: 1; }
   .tabs-striped.tabs-color-dark .tab-item .badge {
     opacity: 0.4; }
   .tabs-striped.tabs-color-dark .tab-item.tab-item-active, .tabs-striped.tabs-color-dark .tab-item.active, .tabs-striped.tabs-color-dark .tab-item.activated {
     margin-top: -2px;
-    color: #30525F;
-    border: 0 solid #30525F;
+    color: #233C45;
+    border: 0 solid #233C45;
     border-top-width: 2px; }
     .tabs-striped.tabs-color-dark .tab-item.tab-item-active .badge, .tabs-striped.tabs-color-dark .tab-item.active .badge, .tabs-striped.tabs-color-dark .tab-item.activated .badge {
       top: 2px;
@@ -3971,9 +3971,9 @@ a.subdued {
   border-color: #6b46e5; }
 
 .tabs-background-dark .tabs, .tabs-background-dark > .tabs {
-  background-color: #30525F;
-  background-image: linear-gradient(0deg, #30525F, #30525F 50%, transparent 50%);
-  border-color: #30525F; }
+  background-color: #233C45;
+  background-image: linear-gradient(0deg, #233C45, #233C45 50%, transparent 50%);
+  border-color: #233C45; }
 
 .tabs-color-light .tab-item {
   color: rgba(255, 255, 255, 0.4);
@@ -4064,52 +4064,52 @@ a.subdued {
       opacity: 1; }
 
 .tabs-color-dark .tab-item {
-  color: rgba(48, 82, 95, 0.4);
+  color: rgba(35, 60, 69, 0.4);
   opacity: 1; }
   .tabs-color-dark .tab-item .badge {
     opacity: 0.4; }
   .tabs-color-dark .tab-item.tab-item-active, .tabs-color-dark .tab-item.active, .tabs-color-dark .tab-item.activated {
-    color: #30525F;
-    border: 0 solid #30525F; }
+    color: #233C45;
+    border: 0 solid #233C45; }
     .tabs-color-dark .tab-item.tab-item-active .badge, .tabs-color-dark .tab-item.active .badge, .tabs-color-dark .tab-item.activated .badge {
       opacity: 1; }
 
 ion-tabs.tabs-color-active-light .tab-item {
-  color: #30525F; }
+  color: #233C45; }
   ion-tabs.tabs-color-active-light .tab-item.tab-item-active, ion-tabs.tabs-color-active-light .tab-item.active, ion-tabs.tabs-color-active-light .tab-item.activated {
     color: #fff; }
 ion-tabs.tabs-color-active-stable .tab-item {
-  color: #30525F; }
+  color: #233C45; }
   ion-tabs.tabs-color-active-stable .tab-item.tab-item-active, ion-tabs.tabs-color-active-stable .tab-item.active, ion-tabs.tabs-color-active-stable .tab-item.activated {
     color: #f8f8f8; }
 ion-tabs.tabs-color-active-positive .tab-item {
-  color: #30525F; }
+  color: #233C45; }
   ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, ion-tabs.tabs-color-active-positive .tab-item.active, ion-tabs.tabs-color-active-positive .tab-item.activated {
     color: #387ef5; }
 ion-tabs.tabs-color-active-calm .tab-item {
-  color: #30525F; }
+  color: #233C45; }
   ion-tabs.tabs-color-active-calm .tab-item.tab-item-active, ion-tabs.tabs-color-active-calm .tab-item.active, ion-tabs.tabs-color-active-calm .tab-item.activated {
     color: #11c1f3; }
 ion-tabs.tabs-color-active-assertive .tab-item {
-  color: #30525F; }
+  color: #233C45; }
   ion-tabs.tabs-color-active-assertive .tab-item.tab-item-active, ion-tabs.tabs-color-active-assertive .tab-item.active, ion-tabs.tabs-color-active-assertive .tab-item.activated {
     color: #ef473a; }
 ion-tabs.tabs-color-active-balanced .tab-item {
-  color: #30525F; }
+  color: #233C45; }
   ion-tabs.tabs-color-active-balanced .tab-item.tab-item-active, ion-tabs.tabs-color-active-balanced .tab-item.active, ion-tabs.tabs-color-active-balanced .tab-item.activated {
     color: #33cd5f; }
 ion-tabs.tabs-color-active-energized .tab-item {
-  color: #30525F; }
+  color: #233C45; }
   ion-tabs.tabs-color-active-energized .tab-item.tab-item-active, ion-tabs.tabs-color-active-energized .tab-item.active, ion-tabs.tabs-color-active-energized .tab-item.activated {
     color: #ffc900; }
 ion-tabs.tabs-color-active-royal .tab-item {
-  color: #30525F; }
+  color: #233C45; }
   ion-tabs.tabs-color-active-royal .tab-item.tab-item-active, ion-tabs.tabs-color-active-royal .tab-item.active, ion-tabs.tabs-color-active-royal .tab-item.activated {
     color: #886aea; }
 ion-tabs.tabs-color-active-dark .tab-item {
   color: #fff; }
   ion-tabs.tabs-color-active-dark .tab-item.tab-item-active, ion-tabs.tabs-color-active-dark .tab-item.active, ion-tabs.tabs-color-active-dark .tab-item.activated {
-    color: #30525F; }
+    color: #233C45; }
 
 .tabs-top.tabs-striped {
   padding-bottom: 0; }
@@ -4238,7 +4238,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .tab-item.tab-item-active.tab-item-royal, .tab-item.active.tab-item-royal, .tab-item.activated.tab-item-royal {
     color: #886aea; }
   .tab-item.tab-item-active.tab-item-dark, .tab-item.active.tab-item-dark, .tab-item.activated.tab-item-dark {
-    color: #30525F; }
+    color: #233C45; }
 
 .item.tabs {
   display: -webkit-box;
@@ -4748,7 +4748,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
     color: #fff; }
   .item.item-dark {
     border-color: #111;
-    background-color: #30525F;
+    background-color: #233C45;
     color: #fff; }
   .item[ng-click]:hover {
     cursor: pointer; }
@@ -4888,7 +4888,7 @@ a.item-content {
     background-color: #6b46e5; }
 .item-complex.item-dark > .item-content {
   border-color: #111;
-  background-color: #30525F;
+  background-color: #233C45;
   color: #fff; }
   .item-complex.item-dark > .item-content.active, .item-complex.item-dark > .item-content:active {
     border-color: #000;
@@ -5262,7 +5262,7 @@ a.item-content {
       transform: translate3d(0, 0, 0); }
 
 .item-reorder .button.icon {
-  color: #30525F;
+  color: #233C45;
   font-size: 32px; }
 
 .item-reordering {
@@ -5437,7 +5437,7 @@ a.item-content {
   background-color: #886aea;
   color: #fff; }
 .tabs .tab-item .badge.badge-dark, .badge.badge-dark {
-  background-color: #30525F;
+  background-color: #233C45;
   color: #fff; }
 
 .button .badge {
@@ -5589,8 +5589,8 @@ a.item-content {
  * --------------------------------------------------
  */
 .spinner {
-  stroke: #30525F;
-  fill: #30525F; }
+  stroke: #233C45;
+  fill: #233C45; }
   .spinner svg {
     width: 28px;
     height: 28px; }
@@ -5619,8 +5619,8 @@ a.item-content {
     stroke: #886aea;
     fill: #886aea; }
   .spinner.spinner-dark {
-    stroke: #30525F;
-    fill: #30525F; }
+    stroke: #233C45;
+    fill: #233C45; }
 
 .spinner-android {
   stroke: #4b8bf4; }
@@ -5632,7 +5632,7 @@ a.item-content {
   stop-color: #fff;
   stop-opacity: 0; }
 .spinner-spiral.spinner-light .stop1 {
-  stop-color: #30525F; }
+  stop-color: #233C45; }
 .spinner-spiral.spinner-light .stop2 {
   stop-color: #fff; }
 
@@ -5649,7 +5649,7 @@ legend {
   padding: 0;
   width: 100%;
   border: 1px solid #ddd;
-  color: #30525F;
+  color: #233C45;
   font-size: 21px;
   line-height: 2.85714; }
   legend small {
@@ -5775,7 +5775,7 @@ input, button, select, textarea {
   padding: 7px 10px 7px 0px;
   max-width: 200px;
   width: 35%;
-  color: #30525F;
+  color: #233C45;
   font-size: 16px; }
 
 .placeholder-icon {
@@ -5841,11 +5841,11 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 textarea {
   padding-left: 0; }
   textarea::-moz-placeholder {
-    color: #93bac8; }
+    color: #79abbb; }
   textarea:-ms-input-placeholder {
-    color: #93bac8; }
+    color: #79abbb; }
   textarea::-webkit-input-placeholder {
-    color: #93bac8;
+    color: #79abbb;
     text-indent: -3px; }
 
 textarea {
@@ -5870,11 +5870,11 @@ input[type="file"] {
   width: 200px; }
 
 input::-moz-placeholder, textarea::-moz-placeholder {
-  color: #93bac8; }
+  color: #79abbb; }
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-  color: #93bac8; }
+  color: #79abbb; }
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
-  color: #93bac8;
+  color: #79abbb;
   text-indent: 0; }
 
 input[disabled], select[disabled], textarea[disabled], input[readonly]:not(.cloned-text-input), textarea[readonly]:not(.cloned-text-input), select[readonly] {
@@ -5948,10 +5948,10 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
   border-color: #886aea; }
 
 .checkbox-dark input:before, .checkbox-dark .checkbox-icon:before {
-  border-color: #30525F; }
+  border-color: #233C45; }
 .checkbox-dark input:checked:before, .checkbox-dark input:checked + .checkbox-icon:before {
-  background: #30525F;
-  border-color: #30525F; }
+  background: #233C45;
+  border-color: #233C45; }
 
 .checkbox input:disabled:before, .checkbox input:disabled + .checkbox-icon:before {
   border-color: #ddd; }
@@ -6096,8 +6096,8 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
   border-color: #886aea;
   background-color: #886aea; }
 .toggle.toggle-dark input:checked + .track {
-  border-color: #30525F;
-  background-color: #30525F; }
+  border-color: #233C45;
+  background-color: #233C45; }
 
 .toggle input {
   display: none; }
@@ -6224,9 +6224,9 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
 .toggle-small .toggle-royal input:checked + .track .handle {
   background-color: #886aea; }
 .toggle-small .toggle-dark input:checked + .track {
-  background-color: rgba(48, 82, 95, 0.5); }
+  background-color: rgba(35, 60, 69, 0.5); }
 .toggle-small .toggle-dark input:checked + .track .handle {
-  background-color: #30525F; }
+  background-color: #233C45; }
 
 /**
  * Radio Button Inputs
@@ -6310,7 +6310,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
     left: -2001px;
     width: 2000px;
     height: 2px;
-    background: #30525F;
+    background: #233C45;
     content: ' '; }
   .range input::-webkit-slider-thumb:after {
     /* create a larger (but hidden) hit area */
@@ -6350,7 +6350,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
   .range.range-royal input::-webkit-slider-thumb:before {
     background: #886aea; }
   .range.range-dark input::-webkit-slider-thumb:before {
-    background: #30525F; }
+    background: #233C45; }
 
 .range .icon {
   -webkit-box-flex: 0;
@@ -6472,7 +6472,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
   .item-select.item-royal:after, .item-select.item-royal .input-label {
     color: #fff; }
   .item-select.item-dark select {
-    background: #30525F;
+    background: #233C45;
     color: #fff; }
   .item-select.item-dark:after, .item-select.item-dark .input-label {
     color: #fff; }
@@ -6765,7 +6765,7 @@ progress {
         color: #fff; }
   .button.button-dark {
     border-color: #111;
-    background-color: #30525F;
+    background-color: #233C45;
     color: #fff; }
     .button.button-dark:hover {
       color: #fff;
@@ -6778,16 +6778,16 @@ progress {
       border-color: transparent;
       background: none;
       box-shadow: none;
-      color: #30525F; }
+      color: #233C45; }
     .button.button-dark.button-icon {
       border-color: transparent;
       background: none; }
     .button.button-dark.button-outline {
-      border-color: #30525F;
+      border-color: #233C45;
       background: transparent;
-      color: #30525F; }
+      color: #233C45; }
       .button.button-dark.button-outline.active, .button.button-dark.button-outline.activated {
-        background-color: #30525F;
+        background-color: #233C45;
         box-shadow: none;
         color: #fff; }
 
@@ -7439,10 +7439,10 @@ a.button {
   border-color: #6b46e5; }
 
 .dark, a.dark {
-  color: #30525F; }
+  color: #233C45; }
 
 .dark-bg {
-  background-color: #30525F; }
+  background-color: #233C45; }
 
 .dark-border {
   border-color: #111; }
@@ -7674,7 +7674,7 @@ a.button {
   padding: 8px; }
 
 h1 {
-  color: #30525F !important;
+  color: #233C45 !important;
   font-weight: bolder !important; }
 
 .description, .description > div {
